# nnue-interface

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
src/: __init__.py  stockfish_nnue_bindings.cpp  uci.cpp
src/nnue/: network.cpp  network.h
